# l5k

./: LICENSE.txt  pyproject.toml
l5k/: __init__.py  aoi.py  builtin.py  controller.py  datatype.py  grammar.py  program.py  tag.py
tests/: common.py  test_aoi.py  test_builtin.py  test_controller.py  test_datatype.py  test_program.py  test_tag.py
tests/grammar/: test_examples.py  test_module.py  test_tag.py
